Update regex challenge testing